--- a/FashionStore/style.css
+++ b/FashionStore/style.css
@@ -1,21 +1,24 @@
-.navbar-options{
+.container{
+    background-color: grey;
+}
+.navbar-options {
     display: flex;
     justify-content: space-around;
-    /* margin-top: 10px; */
-    /* background-color: aqua; */
-height: 175px;
-align-items: center;
+    height: 175px;
+    align-items: center;
+    background-color: white;
 }
 
-h1{
-    font-size: 40px;
-    color: aliceblue;
+h1 {
+    font-size: 30px;
+    color: rgb(16, 16, 16);
+    font-weight: bolder;
+    /* background-color: rgb(174, 137, 208); */
 }
 
-.nav-bar-title{
 
-}
-.navbar{
+
+.navbar {
     height: 75px;
     width: 100%;
     background-color: rgb(174, 137, 208);
@@ -25,25 +28,41 @@ h1{
 
 }
 
-.clothes{
-    height:75px;
+.clothes {
+    height: 75px;
     width: 75px;
+    background-color: gray;
 }
 
-.main-section{
+.main-section {
     background-color: gray;
     align-items: center;
     display: flex;
     justify-content: center;
 }
-#shopping-time{
+
+#shopping-time {
     height: 400px;
     width: 89%;
     padding: 20px;
 }
 
-.sales-table{
-    border: 2px solid black;
-    height: 200px;
-    width: 200px;
+.sales-table {
+margin: auto;
+border: 1px solid rgb(67, 65, 65);
+/* padding: 13px; */
+width: 90vw;
+
+}
+.sales-table-head{
+    background-color: rgb(163, 92, 243);
+    height: 50px;
+}
+
+
+.title {
+    display: flex;
+    justify-content: center;
+    background-color: grey;
+    /* width: 200px; */
 }
